--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ yarn-error.log*
 pnpm-debug.log*
 
 # environment variables
-.env
 .env.production
 
 # macOS-specific files
@@ -31,3 +30,10 @@ pnpm-debug.log*
 package-lock.json
 package.json
 yarn.lock
+
+# venv
+.venv/
+venv/
+
+
+
